Revised branding alignment (bug fix)

--- a/scss/screen.scss
+++ b/scss/screen.scss
@@ -267,7 +267,6 @@ body.queenslaw-sub-site #branding {
     vertical-align: top;
     .field--name-body {
       border-right-color: $white;
-      margin-top: 14px;
     }
   }
   .block-logo svg {
